fix: 마이페이지 내 아이디어 카드 width를 100%로 두도록 하고 grid gap을 준다

--- a/src/components/Idea/MyIdeaList/MyIdeaList.module.scss
+++ b/src/components/Idea/MyIdeaList/MyIdeaList.module.scss
@@ -7,6 +7,11 @@
 
     width: 100%;
 
+    gap: 30px;
+
+    @include mobile {
+      gap: 15px;
+    }
     .gridColumn {
       @include flex_col(flex-start);
       background-clip: padding-box;
